# AdversarialTriggers

./: .gitignore  .pre-commit-config.yaml  CITATION.bib  Makefile  README.md  download.sh  interactive_dgx.sh  interactive_mila.sh  pyproject.toml  python_dgx_job.sh  python_mila_job.sh  python_narval_job.sh  tox.ini
adversarial_triggers/: experiment_utils.py  generation_utils.py
adversarial_triggers/dataset/: __init__.py  data_collator.py  trigger_dataset.py
adversarial_triggers/export/: __init__.py  annotation_mapping.py  plotting_utils.py
adversarial_triggers/metric/: __init__.py  base.py  jailbreak.py
adversarial_triggers/optimizer/: __init__.py  greedy_coordinate_gradient_optimizer.py
adversarial_triggers/template/: __init__.py  chat_template.py  system_message.py
batch_jobs/: _job_script.sh  curve.sh  jailbreak.sh  multiple.sh  response.sh  sft.sh  single.sh
config/: greedy.json  nucleus95.json
experiments/: curve.py  jailbreak.py  multiple.py  response.py  sft.py  single.py
export/: chat_template_table.py  dataset_example_table.py  system_message_table.py
scripts/: inspect_dataset.py  prepare_behaviour_dataset.py  prepare_cona_dataset.py  prepare_controversial_dataset.py  prepare_distillation_dataset.py  prepare_dromedary_dataset.py  prepare_lima_dataset.py  prepare_malicious_dataset.py  prepare_qharm_dataset.py  prepare_saferpaca_dataset.py  prepare_sharegpt_dataset.py  prepare_string_dataset.py  single_turn_chat.py
tests/: test_chat_template.py  test_experiment_utils.py  test_jailbreak_metric.py  test_trigger_dataset.py
(+3 files in other folders)
